changes to collections dropdown and display listing on mobile, couple bugfixes added too

--- a/js/components/product-card/product-card-styles.css
+++ b/js/components/product-card/product-card-styles.css
@@ -9,7 +9,7 @@
 
 .product-card-container {
     width: var(--product-image-width);
-    height: 450px;
+    height: calc(var(--product-image-width) + 200px);
     margin: 10px;
     padding: 10px;
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
@@ -106,6 +106,11 @@
 }
 
 .pc-top-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pc-top-container-modal {
     display: flex;
     justify-content: space-between;
 }
@@ -220,7 +225,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
     transition: color 0.4s ease-in-out;
     transition: background-color 0.4s ease-in-out;
 }
@@ -335,8 +340,15 @@ select option:hover {
 
 /* Media query for cellphones */
 @media (max-width: 480px) {
+    * {
+        --product-image-height: 140px;
+        --product-image-width: 175px;
+    }
+
     .product-card-container {
         -webkit-text-size-adjust: 100%;
+        width: var(--product-image-width);
+        height: calc(var(--product-image-width) + 200px);
     }
 
     .product-card-modal {
@@ -371,5 +383,19 @@ select option:hover {
     .product-image-modal {
         width: var(--product-modal-image-width-mobile);
         height: var(--product-modal-image-height-mobile);
+    }
+
+    .product-button {
+        font-size: 12px;
+    }
+
+    .pc-top-container {
+        height: 46px;
+    }
+
+    .pc-top-container-modal {
+        display: flex;
+        justify-content: space-between;
+        height: auto;
     }
 }
