--- a/js/components/shop-container/shop-container-styles.css
+++ b/js/components/shop-container/shop-container-styles.css
@@ -59,18 +59,19 @@
 }
 
 .search-input {
+    font-size: 14px;
     padding: 0px;
     margin: 10px 0px;
     outline: none;
     border:0;
-    border-bottom:2px solid #000000;
+    border-bottom:1px solid #000000;
     width: 300px;
 }
 
 .search-input:focus-visible, .search-input:focus-within, .search-input:focus, .search-input:hover {
     outline: none;
     border:0;
-    border-bottom:2px solid #434343;
+    border-bottom:1px solid #7a0303;
 }
 
 .search-button {
@@ -85,11 +86,20 @@
 }
 
 .search-button:hover {
-    color: #434343;
+    color: #7a0303;
 }
 
 .search-icon {
-    font-size: 40px;
+    font-size: 25px;
+}
+
+.badge-search-season {
+    width: 100%;
+    text-align: center;
+    font-size: 14px !important;
+    font-weight: 300 !important;
+    background-color: white;
+    color: black;
 }
 
 /* The Modal (background) */
@@ -151,9 +161,14 @@
 .dropbtn {
     background-color: white;
     color: black;
-    padding: 10px;
+    height: 50px;
+    padding: 12px 10px 12px 10px;
     border: none;
     cursor: pointer;
+}
+
+.dropdown-icon {
+    height: 17px;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -188,9 +203,9 @@
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+/* .dropdown:hover .dropdown-content {
     display: block;
-}
+} */
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
@@ -198,7 +213,7 @@
 }
 
 .dropdown-text {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     font-family: Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
@@ -266,8 +281,9 @@ to {opacity: 1}
     }
 
     .search-box {
+        width: 100%;
         margin: 0px;
-        padding: 0px 15px;
+        padding: 0px calc((100% - 250px)/2);
         display: flex;
         flex-direction: row;
     }
@@ -279,7 +295,7 @@ to {opacity: 1}
         margin:10px; */
         outline: none;
         border:0;
-        border-bottom:2px solid #000000;
+        border-bottom:1px solid #000000;
         width: 250px;
     }
 
@@ -291,6 +307,21 @@ to {opacity: 1}
         flex-wrap: wrap;
         justify-content: center;
         /* overflow-y: scroll; */
+    }
+
+    .badge-search-season {
+        padding: 6px;
+        width: fit-content;
+        font-size: 12px !important;
+        font-weight: 300 !important;
+        /* background-color: #434343;
+        color: white; */
+        border-radius: 5px;
+        border-style: solid;
+        border-width: 1px;
+        border-color: #000000;
+        background-color: #FFFFFF;
+        color: #000000;
     }
 
 }
